kubernetes/k3s-01/workloads/tubearchivist/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tubearchivist
  template:
    metadata:
      labels:
        app: tubearchivist
    spec:
      containers:
        - name: tubearchivist
          image: docker.io/bbilly1/tubearchivist:v0.5.12@sha256:ba1c846ddd0c6fdd0f040727129d2466e03b7a0c26499223839d450c7586ac09
